--- a/index.html
+++ b/index.html
@@ -2,11 +2,41 @@
 <html>
 
 <head>
-
+    Presentacion de mi persona
 </head>
 
 <body>
-
+    <a href="objetivos//index.html">Objetivos</a>
+    <h1>
+        Nombres:
+    </h1>
+    <section>
+        Ibrahim Imanol Jordi
+    </section>
+    <h1>
+        Apellidos:
+    </h1>
+    <section>
+        Arquiñigo Jacinto
+    </section>
+    <h1>
+        Edad:
+    </h1>
+    <section>
+        19 años
+    </section>
+    <h1>
+        Sexo:
+    </h1>
+    <section>
+        Masculino
+    </section>
+    <h1>
+        Hobbies:
+    </h1>
+    <section>
+        Me gusta jugar videojuegos, escuchar musica electronica y jugar con mis mascotas.
+    </section>
 </body>
 
 
