--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <a href="objetivos//index.html">Objetivos</a>
+    <a href="objetivos/index.html">Objetivos</a>
     <h1>
         Nombres:
     </h1>
