--- a/objetivos/index.html
+++ b/objetivos/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-<header>
+
+<head>
+
     <a id="#index.html">Objetivos</a>
-</header>
+</head>
 
 <body>
-
+    <p>
+        Me encantaria aprender mas sobre programacion para desarrollo web con html,php,css,javascript.<br> Ademas de desarrollarme con estas habilidades busco aprender de mis compañeros de equipo y <br> junto llevarnos bien.
+    </p>
 </body>
 
 
