--- a/objetivos/index.html
+++ b/objetivos/index.html
@@ -2,11 +2,13 @@
 <html>
 
 <head>
-
     <a id="#index.html">Objetivos</a>
 </head>
 
 <body>
+    <header>
+        <a href="../index.html">Index</a>
+    </header>
     <p>
         Me encantaria aprender mas sobre programacion para desarrollo web con html,php,css,javascript.<br> Ademas de desarrollarme con estas habilidades busco aprender de mis compañeros de equipo y <br> junto llevarnos bien.
     </p>
