--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-    <a href="objetivos/index.html">Objetivos</a>
+    <header>
+        <a href="objetivos/index.html">Objetivos</a>
+    </header>
     <h1>
         Nombres:
     </h1>
